<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarSepet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >
            <TextView
                android:id="@+id/txtToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/pacificoo"
                android:text="@string/baslik_yem"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="206dp"
                tools:layout_editor_absoluteY="14dp" />
            <TextView
                android:id="@+id/txtToolbar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/pacificoo"
                android:text="@string/baslik_ekler"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="206dp"
                tools:layout_editor_absoluteY="14dp" />
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/siparisiniz_alinmistir"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarSepet" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardviewCevreyiKoru"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginTop="35dp"
            android:backgroundTint="@color/cardviewArkaPlan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/cevreyi_koru"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cevreyi_koru_metin"
                    app:layout_constraintStart_toStartOf="@+id/checkBox"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:text="@string/odeme_secenekleri"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardviewCevreyiKoru" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardviewOdemeSecenekleri"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/cardviewArkaPlan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/radioButtonNakitOdeme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/odeme_secenekleri1" />

                    <RadioButton
                        android:id="@+id/radioButtonKartlaOdeme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/odeme_secenekleri2" />
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/buttonDegisiklik"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/degisiklikleri_kaydet"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>