<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="sepetToolbarBaslik" type="String" />
        <variable name="sepetAdapter" type="com.basaran.yemeklerproje.adapter.SepetAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.SepetFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarSepet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >
            <TextView
                android:id="@+id/txtToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/pacificoo"
                android:text="@string/baslik_yem"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="206dp"
                tools:layout_editor_absoluteY="14dp" />
            <TextView
                android:id="@+id/txtToolbar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/pacificoo"
                android:text="@string/baslik_ekler"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="206dp"
                tools:layout_editor_absoluteY="14dp" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSepet"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adapter="@{sepetAdapter}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarSepet" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/textViewSepetFiyat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sifir"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/buttonSiparisiTamamla"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/siparis_ver"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cardView2"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>