<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="loginToolbarBaslik" type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="400dp"
            android:layout_height="300dp"
            android:layout_marginTop="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/foodlogin" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/hos_geldin"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkBoxHatirla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beni_hatirla"
            app:layout_constraintStart_toStartOf="@+id/cardViewEdtText"
            app:layout_constraintTop_toBottomOf="@+id/cardViewEdtText" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewEdtText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/koyuAnaRenk2"
            app:cardCornerRadius="30dp"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextKullaniciAdi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/koyuAnaRenk2"
                    android:drawableStart="@drawable/user"
                    android:drawablePadding="4dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttonGiris"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:background="@drawable/custom_button"
                    app:icon="@drawable/login"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/editTextKullaniciAdi"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kullanici_adini_giriniz"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/cardViewEdtText"
            app:layout_constraintStart_toStartOf="@+id/cardViewEdtText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>